--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
+<!DOCTYPE html>
 
+<html lang="en">
+    
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width", initial-scale="1.0">
+    <title>Counter</title>
+    <link rel="stylesheet" href="./styles.css">
+   
+</head>
+<body>
+    <div>
+        <p>
+            the U ITS ALL ABOUT THE U U SAY IT. THE U ITS ALL ABOUT THE U.
+             ITS ALL ABOUT THE U ITS ALL ABOUT THE U YOU SAY IT"
+
+        </p>
+        <img src="./cute-ai-generated-cartoon-bunny_23-2150288873.avif" alt="img">
+
+        <h1>0</h1>
+    </div>
+
+    <script src="main.js"></script>
+</body>
+</html>
